# d00t

./: .cursorignore  .gitmodules  README.md  client.py  config.py  create_dummy_model.py  create_simple_robot.sh  create_test_robot.py  deep_research.md  general_instructions.md  main.py  model.onnx  ollama.py  pyproject.toml  run.sh  run_with_gemma.sh  run_with_gemma_auto.sh  setup.sh  start_robot.py  test.py  user_config_example.py  vlm_integration.py  voice_integration.py
assets/: robot.usd
control/: README_CONTROL.md  controller.py
open_duck_mini_v2/: open_duck_mini_v2.usd
open_duck_mini_v2/configuration/: open_duck_mini_v2_physics.usd  open_duck_mini_v2_sensor.usd
perception/: README_PERCEPTION.md  camera.py  model_inference.py
robot_logging/: README_LOGGING.md  telemetry.py
simulation/: README_SIM.md  environment.py  robot_loader.py
