[project]
name = "open_duck_vlm"
version = "0.1.0"
description = "VLM integration for Open Duck Robot"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.8"
dependencies = [
    "flask>=2.0.0",
    "Pillow>=9.0.0",
    "numpy>=1.20.0",
    "requests>=2.25.0",
    "onnx>=1.12.0",
    "onnxruntime>=1.12.0",
    "opencv-python>=4.5.0",
    "mujoco>=2.3.3",
]

[project.scripts]
ollama-run = "vlm_integration:main"
external-run = "vlm_integration:main"
interactive = "vlm_integration:main"
ollama-manager = "ollama:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3

# Additional NVIDIA index - this will be used when installing with UV via:
# uv pip install -e . --extra-index-url https://pypi.nvidia.com
